[package]
name = "neon-talk"
version = "0.1.0"
authors = ["K.J. Valencik <kjvalencik@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"

[lib]
name = "neon_talk"
crate-type = ["dylib"]

[build-dependencies]
neon-build = { git = "https://github.com/neon-bindings/neon" }

[dependencies]
neon = { git = "https://github.com/neon-bindings/neon" }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
